SnR SeaMonkey -> Borealis in shell, installer, and l10n

--- a/locales/en-US/chrome/branding/aboutRights.dtd
+++ b/locales/en-US/chrome/branding/aboutRights.dtd
@@ -20,7 +20,7 @@
 <!ENTITY rights.intro-point1b "Mozilla Public License">
 <!ENTITY rights.intro-point1c ". This means you may use, copy and distribute &brandShortName; to others.  You are also welcome to modify the source code of &brandShortName; as you want to meet your needs. The Mozilla Public License also gives you the right to distribute your modified versions.">
 
-<!ENTITY rights.intro-point2a "Mozilla does not grant you any rights to the Mozilla and SeaMonkey trademarks or logos. Additional information on Trademarks may be found ">
+<!ENTITY rights.intro-point2a "Binary Outcast does not grant you any rights to the Borealis or any lingering Mozilla trademarks or logos. Additional information on Trademarks may be found ">
 <!ENTITY rights.intro-point2b "here">
 <!ENTITY rights.intro-point2c ".">
 
