--- a/locales/en-US/chrome/common/downloads/downloadmanager.properties
+++ b/locales/en-US/chrome/common/downloads/downloadmanager.properties
@@ -21,12 +21,12 @@ downloadsTitlePercent=%2$S%% of %1$S file - Download Manager;%2$S%% of %1$S file
 
 # LOCALIZATION NOTE (progressTitle):
 # %1$S is the file name, %2$S is the download state
-# examples: coolvideo.ogg - Finished; seamonkey-nightly.zip - Paused
+# examples: coolvideo.ogg - Finished; Borealis-nightly.zip - Paused
 progressTitle=%1$S - %2$S
 # LOCALIZATION NOTE (progressTitlePercent):
 # %1$S is download percent, %2$S is the file name, %3$S is the download state
 # %% will appear as a single % sign, so %1$S%% is the percent number plus the % sign
-# examples: 42% of coolvideo.ogg - Paused; 98% of seamonkey-nightly.zip - Downloading
+# examples: 42% of coolvideo.ogg - Paused; 98% of Borealis-nightly.zip - Downloading
 progressTitlePercent=%1$S%% of %2$S - %3$S
 
 # LOCALIZATION NOTE (percentFormat): %1$S is download percent
