--- a/locales/en-US/chrome/common/sync/syncSetup.properties
+++ b/locales/en-US/chrome/common/sync/syncSetup.properties
@@ -37,13 +37,13 @@ passwordsCount.label        = #1 password;#1 passwords
 addonsCount.label           = #1 add-on;#1 add-ons
 
 save.recoverykey.title = Save Recovery Key
-save.recoverykey.defaultfilename = SeaMonkey Recovery Key.xhtml
+save.recoverykey.defaultfilename = Borealis Recovery Key.xhtml
 
-newAccount.action.label = SeaMonkey Sync is now set up to automatically sync all of your browser data.
+newAccount.action.label = Borealis Sync is now set up to automatically sync all of your browser data.
 newAccount.change.label = You can choose exactly what to sync by selecting Sync Options below.
-resetClient.change.label = SeaMonkey Sync will now merge all this computer's browser data into your Sync account.
-wipeClient.change.label = SeaMonkey Sync will now replace all of the browser data on this computer with the data in your Sync account.
-wipeRemote.change.label = SeaMonkey Sync will now replace all of the browser data in your Sync account with the data on this computer.
+resetClient.change.label = Borealis Sync will now merge all this computer's browser data into your Sync account.
+wipeClient.change.label = Borealis Sync will now replace all of the browser data on this computer with the data in your Sync account.
+wipeRemote.change.label = Borealis Sync will now replace all of the browser data in your Sync account with the data on this computer.
 existingAccount.change.label = You can change this preference by selecting Sync Options below.
 
 # Several other strings are used (via Weave.Status.login), but they come from
