--- a/locales/en-US/installer/windows/custom.properties
+++ b/locales/en-US/installer/windows/custom.properties
@@ -31,7 +31,7 @@ CHATZILLA_TEXT=A clean, easy to use and highly extensible IRC client.
 CONTEXT_OPTIONS=$BrandShortName &Options
 CONTEXT_SAFE_MODE=$BrandShortName &Safe Mode
 SAFE_MODE=Safe Mode
-# MAILNEWS_TEXT appears in Windows (All) Programs menu as "SeaMonkey $(MAILNEWS_TEXT)"
+# MAILNEWS_TEXT appears in Windows (All) Programs menu as "Borealis $(MAILNEWS_TEXT)"
 MAILNEWS_TEXT=Mail
 PROFILE_TEXT=Profile Manager
 OPTIONS_PAGE_TITLE=Setup Type
