--- a/locales/en-US/chrome/common/certError.dtd
+++ b/locales/en-US/chrome/common/certError.dtd
@@ -2,7 +2,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
-<!-- These strings are used by SeaMonkey's custom about:certerror page,
+<!-- These strings are used by Borealis's custom about:certerror page,
 a replacement for the standard security certificate errors produced
 by NSS/PSM via netError.xhtml. -->
 
