--- a/locales/en-US/chrome/common/quitDialog.properties
+++ b/locales/en-US/chrome/common/quitDialog.properties
@@ -7,7 +7,7 @@
 
 # LOCALIZATION NOTE:
 # %S (also in the messages further down)
-# is the application's short name (e.g. SeaMonkey)
+# is the application's short name (e.g. Borealis)
 # from the brand.properties file
 quitDialogTitle=Quit %S
 lastwindowDialogTitle=Close %S Browser
