Adjust some preferences

--- a/locales/en-US/chrome/browser/region.properties
+++ b/locales/en-US/chrome/browser/region.properties
@@ -6,8 +6,8 @@
 #
 # all.js
 #
-browser.startup.homepage=https://github.com/binoc-central/navigator
-browser.throbber.url=https://github.com/binoc-central/navigator
+browser.startup.homepage=http://xref.binaryoutcast.com/navigator/source/
+browser.throbber.url=http://xref.binaryoutcast.com/navigator/source/
 
 browser.translation.service=http://translate.google.com/translate?prev=/language_tools&u=
 browser.translation.serviceDomain=translate.google.com
