--- a/locales/en-US/chrome/common/pref/pref-http.dtd
+++ b/locales/en-US/chrome/common/pref/pref-http.dtd
@@ -19,8 +19,8 @@
 <!ENTITY prefPara                            "HTTP connections may be fine-tuned using these options to enhance either performance or compatibility. Some proxy servers, for example, are known to require HTTP/1.0 (see the release notes for details).">
 <!ENTITY prefPipeWarning                     "WARNING: pipelining is an experimental feature, designed to improve page-load performance, that is unfortunately not well supported by some web servers and proxies.">
 <!ENTITY prefUseragent.label                 "User Agent String">
+<!ENTITY prefGeckoCompat.label               "Advertise Gecko compatibility">
+<!ENTITY prefGeckoCompat.accesskey           "G">
 <!ENTITY prefFirefoxCompat.label             "Advertise Firefox compatibility">
 <!ENTITY prefFirefoxCompat.accesskey         "F">
-<!ENTITY prefLightningShow.label             "Advertise Lightning installation">
-<!ENTITY prefLightningShow.accesskey         "L">
-<!ENTITY prefCompatWarning                   "WARNING: disabling these settings may result in websites or services not working properly.">
+<!ENTITY prefCompatWarning                   "WARNING: Changing these settings may result in websites or services not working properly.">
