--- a/mail/locales/en-US/chrome/messenger-region/region.properties
+++ b/mail/locales/en-US/chrome/messenger-region/region.properties
@@ -3,12 +3,12 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 # Default search engine
-browser.search.defaultenginename=Bing
+browser.search.defaultenginename=DuckDuckGo
 
 # Search engine order (order displayed in the search bar dropdown)s
-browser.search.order.1=Bing
-browser.search.order.2=Yahoo
-browser.search.order.3=
+browser.search.order.1=DuckDuckGo
+browser.search.order.2=Ecosia
+browser.search.order.3=Wikipedia (en)
 
 # To make mapit buttons to disappear in the addressbook, specify empty string.  For example:
 # mail.addr_book.mapit_url.format=
