[MAIL] Modify Preferences to be Preferences and fix some minor styling

--- a/mail/locales/en-US/chrome/communicator/utilityOverlay.dtd
+++ b/mail/locales/en-US/chrome/communicator/utilityOverlay.dtd
@@ -31,8 +31,8 @@
 <!ENTITY selectAllCmd.label          "Select All">
 <!ENTITY selectAllCmd.key          "A">
 <!ENTITY selectAllCmd.accesskey        "A">
-<!ENTITY preferencesCmd2.label "Options">
-<!ENTITY preferencesCmd2.accesskey "O">
+<!ENTITY preferencesCmd2.label "Preferences">
+<!ENTITY preferencesCmd2.accesskey "n">
 <!ENTITY preferencesCmdUnix.label       "Preferences">
 <!ENTITY preferencesCmdUnix.accesskey     "n">
 
