--- a/mail/locales/en-US/chrome/messenger/preferences/display.dtd
+++ b/mail/locales/en-US/chrome/messenger/preferences/display.dtd
@@ -4,6 +4,7 @@
 
 <!ENTITY itemFormatting.label             "Formatting">
 <!ENTITY itemTags.label                   "Tags">
+<!ENTITY itemTabs.label                   "Tabbed Mail">
 <!ENTITY itemAdvanced.label               "Advanced">
 
 <!ENTITY style.label                      "Style:">
@@ -46,6 +47,18 @@
 <!ENTITY colorButton.label       "Colors…">
 <!ENTITY colorButton.accesskey   "C">
 
+<!-- Tabs -->
+<!ENTITY openMsgIn.label                  "Open messages in:">
+<!ENTITY openMsgInNewTab.label            "A new tab">
+<!ENTITY openMsgInNewTab.accesskey        "t">
+<!ENTITY reuseExpRadio0.label             "A new message window">
+<!ENTITY reuseExpRadio0.accesskey         "n">
+<!ENTITY reuseExpRadio1.label             "An existing message window">
+<!ENTITY reuseExpRadio1.accesskey         "e">
+<!ENTITY autoHide.label                   "Hide the tab bar when only one tab is open">
+<!ENTITY closeMsgOnMoveOrDelete.label     "Close message window/tab on move or delete">
+<!ENTITY closeMsgOnMoveOrDelete.accesskey "C">
+
 <!-- Advanced -->
 <!ENTITY reading.caption                  "Reading">
 <!ENTITY display.caption                  "Display">
@@ -62,12 +75,3 @@
 <!ENTITY markAsReadDelay.label            "After displaying for">
 <!ENTITY markAsReadDelay.accesskey        "d">
 <!ENTITY secondsLabel.label               "seconds">
-<!ENTITY openMsgIn.label                  "Open messages in:">
-<!ENTITY openMsgInNewTab.label            "A new tab">
-<!ENTITY openMsgInNewTab.accesskey        "t">
-<!ENTITY reuseExpRadio0.label             "A new message window">
-<!ENTITY reuseExpRadio0.accesskey         "n">
-<!ENTITY reuseExpRadio1.label             "An existing message window">
-<!ENTITY reuseExpRadio1.accesskey         "e">
-<!ENTITY closeMsgOnMoveOrDelete.label     "Close message window/tab on move or delete">
-<!ENTITY closeMsgOnMoveOrDelete.accesskey "C">
