Issue #33 - Port opportunistic encryption changes - Part 1: Mail

--- a/mail/locales/en-US/chrome/messenger/preferences/security.dtd
+++ b/mail/locales/en-US/chrome/messenger/preferences/security.dtd
@@ -5,6 +5,10 @@
 <!ENTITY itemGeneral.label        "General">
 <!ENTITY itemPasswords.caption    "Passwords">
 
+<!ENTITY  OpEnc.label                "Opportunistic Encryption">
+<!ENTITY  enableUIROpEnc.label       "Enable Upgrade Insecure Requests">
+<!ENTITY  enableAltSvcOpEnc.label    "Enable HTTP Alternative Services">
+
 <!ENTITY itemEmail.label        "E-Mail">
 <!ENTITY itemJunk.caption         "Junk Mail Controls">
 <!ENTITY itemPhishing.caption     "Phishing Protection">
